# sqlx-sample

./: .env  Cargo.toml
migrations/: 20221125160211_json.sql
src/: main.rs
