[package]
name = "json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1.20.0", features = ["macros"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
